<resources>
    <string name="app_name">Game Demo</string>
    <string name="ruleone">Alex invests 100/- on single number (for e.g. 2) and then it is the winning number, he will win 900/-</string>
    <string name="ruletwo">Alex invests 100/- on two numbers (for e.g. 2 &amp; 3) and then either of them is the winning number, he will win 450/-</string>
    <string name="rulethree">Alex invests 100/- on three numbers (for e.g. 1,2 &amp; 3) and then either of them is the winning number, he will win 300/-</string>
    <string name="rulefour">Alex invests 100/- on four numbers (for e.g. 0, 1, 2 &amp; 3) and then either of them is the winning number, he will win 200/-</string>
    <string name="Capture_photo_from_camera">Capture photo from camera</string>
    <string name="Select_photo_from_gallery">Select photo from gallery</string>
    <string name="canclecaptcheimage">Captured image not uploaded</string>
    <string name="failedtocaptch">Sorry! Failed to capture image</string>
    <string name="cancle_imagegselect">Selected image not Uploaded</string>
    <string name="flaid_select_image">No image selected</string>
    <string name="something_went_wrong">Some thing went wrong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_time"><![CDATA[Date & Time  -]]></string>
    <string name="saven_up_r_1">"You can place bet  on the number between 2 to 6 or number 7 or between 8 to 12"</string>
    <string name="saven_up_r_2">Player is free to place bet on any slot of his choice</string>
    <string name="saven_up_r_3">Amount in multiples of 10(from 10/- to 1000/-)</string>
    <string name="saven_up_r_4">"You just have to select number between 2 to 6 or number 7 or between 8 to 12 and click on roll dice "</string>
    <string name="saven_up_r_5">" If you place a bet of 100/- on number between 2 to 6  and if the number comes between 2 to 6 then you win 200/- .which means your winning amount is doubled ."</string>
    <string name="saven_up_r_6">"If you place a bet of 100/- on number between 8 to 12  and if the number comes between 8 to 12 then you win 200/- .which means your winning amount is doubled. "</string>
    <string name="saven_up_r_7">If you place a bet of 100/- on number 7  and if the number comes exatact 7 then you win 300/- .which means your winning amount is tripled.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">SaddaAdda</string>
    <string name="fcm_message">FCM Message</string>
    <string name="Logout">Logout</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="sgin_in">Sign in</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget \nPassword</string>
    <string name="forget">Forget Password</string>
    <string name="submit">Submit</string>
    <string name="enter_user_d">Please enter User ID</string>
    <string name="enter_passsword">Please enter password</string>
    <string name="name">Name</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_4_digit_pin">Enter 4 digit pin</string>
    <string name="confirm_4_digit_pin">Confirm 4 digit pin</string>
    <string name="pls_enter_user_id">Please enter User ID</string>
    <string name="psl_enter_password">Please enter Password</string>
    <string name="psl_enter_name">Please enter Name</string>
    <string name="psl_enter_ref_code">Please enter Referral code</string>
    <string name="pls_enter_mobiel_no_10">"Please enter Mobile no "</string>
    <string name="ps_enter_conf_pwd">Please enter Confirm password</string>
    <string name="cofirm_pwd_not_match">Confirm Password not match</string>
    <string name="confim_pin_not_match">Confirm pin not match</string>
    <string name="select_lang">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi(हिन्दी)</string>
    <string name="setting">Change language</string>
    <string name="profile">Profile</string>
    <string name="change_pin">Change Pin</string>
    <string name="change_password">Change Password</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="sell_history">Sell History</string>
    <string name="buy_history">Buy History</string>
    <string name="buy_transaction_report">Buy Transaction Report</string>
    <string name="withdrawal_transaction_report">Withdrawal Transaction Report</string>
    <string name="more">More</string>
    <string name="create_account">Create Account</string>
    <string name="r_u_sure_logout_message">Are you sure you want to Logout?</string>
    <string name="ok">OK</string>
    <string name="logout_success">Logout Successfully</string>
    <string name="Cancel">Cancel</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="update">Update</string>
    <string name="pls_enter_old_pwd">Please Enter old password</string>
    <string name="pls_enter_new_pwd">Please Enter new password</string>
    <string name="pls_confirm_pwd">Please Enter confirm password</string>
    <string name="pls_enter_otp">Please Enter OTP</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="pls_enter_new_pin">Please enter new pin</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="chat">Chat</string>
    <string name="let_s_understand_the_exciting_benefits_of_the_game_with_simple_example">Let\'s understand the exciting benefits of the game with simple example:</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="enter_amount_here">Enter Amount here</string>
    <string name="are_you_sure_you_wanted_to_n_confirm_this_transaction">Are You sure You Wanted To\n Confirm This Transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_wanted_to_n_reject_this_transaction">Are You sure You Wanted To\n Reject This Transaction?</string>
    <string name="transaction_slip">Transaction slip</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No File Chosen</string>
    <string name="minimum_50_maximum_10000">(Minimum 50 Maximum 10000)</string>
    <string name="buy_no">Transaction ID</string>
    <string name="amount">Amount</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="buy">Buy</string>
    <string name="assign_date">Assign Date</string>
    <string name="to_user_id">To User ID</string>
    <string name="details">Details</string>
    <string name="send_sms">Send SMS</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="view_slip">View Slip</string>
    <string name="upload_slip">Upload Slip</string>
    <string name="pls_chose_file">Please Choose File</string>
    <string name="uploa_fail">Upload fail</string>
    <string name="givers_name">Giver\'s Name</string>
    <string name="Sell">Sell</string>
    <string name="date">Date</string>
    <string name="balance">Balance</string>
    <string name="remark">Remark</string>
    <string name="type_your_message_here">Type Your Message here</string>
    <string name="rs">Rs</string>
    <string name="ticket">Ticket</string>
    <string name="help_details">Help Details</string>
    <string name="from_user">From user</string>
    <string name="to_user">To user</string>
    <string name="contact_no">Contact No</string>
    <string name="google_pay_no">Google Pay No</string>
    <string name="phonepe_no">PhonePe No</string>
    <string name="holder_name">Holder Name</string>
    <string name="account_no">Account No</string>
    <string name="branch_name">Branch Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="select_date">Select Date</string>
    <string name="winner_number">Winner Number</string>
    <string name="number">Number</string>
    <string name="status">Status</string>
    <string name="you_won">You won</string>
    <string name="paytm_no">Paytm No</string>
    <string name="enter_number">Enter Number</string>
    <string name="bank_details">Bank Details</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_ifsc_code">Enter Ifsc Code</string>
    <string name="enter_branch_name">Enter Branch Name</string>
    <string name="account_number">Account Number</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="all_transactions">All Transactions</string>
    <string name="trans_type">Trans Type</string>
    <string name="sadda_x">Sadda X</string>
    <string
        name="say_alex_has_100_to_invest_now_he_can_put_the_money_on_any_and_multiple_numbers_from_0_to_9">Say Alex has 100/- to invest, now he can put the money on any and multiple numbers from 0 to 9.</string>
    <string
        name="let_s_have_a_look_on_what_are_the_possibilities_for_alex_to_benefit_from_his_investment">Let\'s have a look on what are the possibilities for Alex to benefit from his investment:</string>
    <string name="note">Note:</string>
    <string name="player_is_free_to_invest_amount_on_multiple_numbers">•\tPlayer is free to invest amount on multiple numbers</string>
    <string name="amount_in_multiples_of_10_from_10_to_1000_on_set_numbers">•\tAmount in multiples of 10 (from 10/- to 1000/-) on set numbers</string>
    <string name="_1_investing_on_single_number_x9_returns">1. Investing on single number ( x9 returns )</string>
    <string name="_2_investing_on_two_numbers_x4_5_returns">2. Investing on two numbers ( x4.5 returns )</string>
    <string name="_3_investing_on_three_numbers_x3_returns">3. Investing on three numbers ( x3 returns )</string>
    <string name="_4_investing_on_four_numbers_x2_returns_double">4. Investing on four numbers ( x2 returns / double )</string>
    <string name="sell_coins">Sell Coins</string>
    <string name="wallet_balance_transfer">Wallet Balance Transfer</string>
    <string name="available_coins">Available Coins</string>
    <string name="transfer">Transfer</string>
    <string name="bet">BET</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="remind_me">Remind me</string>
    <string name="join_now">JOIN NOW</string>
    <string name="enter_your_bet_here">Enter your bet here</string>
    <string name="pls_enter_amount">Please Enter Amount</string>
    <string name="you_can_place_bet_on_any_number_of_your_choice_from_1_to_100">You can place bet on any number of your choice from 1 to 100</string>
    <string
        name="player_is_free_to_place_bet_on_any_number_of_his_choice_and_also_on_multiple_numbers">Player is free to place bet on any number of his choice and also on multiple numbers.</string>
    <string name="amount_in_multiples_of_10_from_10_to_unlimited">Amount in multiples of 10(from 10/- to unlimited)</string>
    <string
        name="you_just_have_to_select_any_number_between_1_to_100_and_enter_the_amount_of_your_choice_and_click_on_submit">You just have to select any number between 1 to 100 and enter the amount of your choice and click on submit</string>
</resources>