<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".View.CreateAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"

                android:src="@drawable/logo_animation" />


            <TextView
                android:id="@+id/glowingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/amazon_bold"
                android:padding="10dp"
                android:shadowColor="@color/yellows"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/yellows"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etRefralCode"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/enter_referral_code"
                android:imeOptions="actionNext"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etUserId"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:editable="false"
                android:focusable="false"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/user_id"
                android:imeOptions="actionNext"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"

                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/enter_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etCmfPassword"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"

                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:digits="123456789"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/enter_4_digit_pin"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/c_pin"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:digits="123456789"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/confirm_4_digit_pin"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/edt_bg"
                    android:fontFamily="@font/amazon_bold"
                    android:gravity="center"
                    android:shadowColor="@color/white"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="20"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>