<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".View.ForgetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />


            <TextView
                android:id="@+id/glowingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/amazon_bold"
                android:padding="10dp"
                android:shadowColor="@color/yellows"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:textAllCaps="true"
                android:text="@string/forget_password"
                android:textColor="@color/yellows"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <EditText
                android:id="@+id/etUserId"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/plug_bg"
                android:fontFamily="@font/amazon_regular"
                android:hint="@string/user_id"
                android:imeOptions="actionNext"
                android:paddingStart="30dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowColor="@color/lightgreen"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="20"
                android:singleLine="true"
                android:textColor="@color/lightgreen"
                android:textColorHint="@color/lightgreen"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
             >

                <TextView
                    android:id="@+id/submitBtn"
                    android:background="@drawable/edt_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:fontFamily="@font/amazon_bold"
                    android:shadowColor="@color/white"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="20"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>